# AutonomousAgentSim

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: main.cpp
src/aas/control/: BoidController.h  FlightController.h  SwarmController.h
src/aas/drone/: Boid.cpp  Boid.h  Drone.h
src/aas/math/: Formulas.cpp  Formulas.h  SetPoint.h  Vec.h  Vector2.h  Vector3.h
src/aas/sim/: Commands.h  GroupCommands.h  Simulation.cpp  Simulation.h  SimulationConfig.h  World.h
tests/: test_vec.cpp  test_vec.h
